force-app/main/default/objects/Decision__c/Decision__c.object-meta.xml
<CustomObject>
    <description>Object to track decisions made related to change requests and issues</description>
    <label>Decision</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Decision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>