force-app/main/default/objects/Decision__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>Text area to provide additional notes and comments regarding the decision</description>
    <label>Additional Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>