force-app/main/default/objects/Decision__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Communication Channel used for delivering the decision</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verbal - In-Person</fullName>
            </value>
            <value>
                <fullName>Verbal - Phone</fullName>
            </value>
            <value>
                <fullName>Written - Email</fullName>
            </value>
            <value>
                <fullName>Written - Signed Sheet</fullName>
            </value>
            <value>
                <fullName>Written - Document</fullName>
            </value>
            <value>
                <fullName>System - Approval Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>