force-app/main/default/objects/Decision__c/fields/Dated_Raised__c.field-meta.xml
<CustomField>
    <fullName>Dated_Raised__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the decision was raised</description>
    <label>Dated Raised</label>
    <type>Date</type>
</CustomField>