force-app/main/default/objects/Decision__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Description of the Decision that was made</description>
    <label>Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>