force-app/main/default/objects/Decision__c/fields/Decision_Owner__c.field-meta.xml
<CustomField>
    <fullName>Decision_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is the decision maker</description>
    <label>Decision Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>