force-app/main/default/objects/Decision__c/fields/Decision_Required__c.field-meta.xml
<CustomField>
    <fullName>Decision_Required__c</fullName>
    <description>Text field to describe the decision required</description>
    <label>Decision Required</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>