force-app/main/default/objects/Decision__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date the decision is due</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>