force-app/main/default/objects/Decision__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <description>Picklist to identify the department/role who initiated the decision</description>
    <label>Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Management (President, Vice Presidents)</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>