force-app/main/default/objects/Decision__c/fields/Related_Issue_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue_Request__c</fullName>
    <description>Identifies the Issue/Request this decision is related to</description>
    <label>Related Issue/Request</label>
    <referenceTo>IssueRequest__c</referenceTo>
    <relationshipLabel>Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>