force-app/main/default/objects/Decision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current Status of the Decision</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed - Approved</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>